--- a/week4/homework/package.json
+++ b/week4/homework/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js | pino-pretty",
+    "dev": "nodemon --ignore '*.json' src/app.js | pino-pretty",
     "lint": "eslint ."
   },
   "keywords": [],
